--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body { font-family: 'Roboto', sans-serif; height: 100vh; display: flex; overflow: hidden; background: #dfe6e9; }
 .editor-panel { width: var(--panel-w); background: var(--bg-editor); border-right: 1px solid #dcdde1; display: flex; flex-direction: column; z-index: 10; box-shadow: 5px 0 15px rgba(0,0,0,0.05); }
 .editor-header { padding: 20px; background: var(--gradient); color: #fff; box-shadow: 0 4px 10px rgba(108, 92, 231, 0.3); }
-.editor-header h2 { font-family: 'Montserrat', sans-serif; font-size: 18px; margin: 0; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; gap: 10px; }
+.editor-header h2 { font-family: 'Montserrat', sans-serif; font-size: 15px; margin: 0; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; gap: 10px; }
 .tabs { display: flex; background: #fff; padding: 0 10px; border-bottom: 1px solid #e0e0e0; }
 .tab { flex: 1; text-align: center; padding: 15px 0; color: var(--text-muted); cursor: pointer; font-size: 12px; font-weight: 600; border-bottom: 3px solid transparent; transition: 0.3s; text-transform: uppercase; }
 .tab:hover { color: var(--primary); background: #fdfdfd; }
@@ -26,7 +26,7 @@ body { font-family: 'Roboto', sans-serif; height: 100vh; display: flex; overflow
 .file-upload-row { display: flex; gap: 5px; }
 .file-upload-row input[type="text"] { flex: 1; border-top-right-radius: 0; border-bottom-right-radius: 0; }
 input[type="file"] { display: none; }
-.btn-upload { background: #dfe6e9; border: 2px solid #e6e6e6; border-left: none; border-top-right-radius: 8px; border-bottom-right-radius: 8px; padding: 0 12px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 18px; transition: 0.2s; }
+.btn-upload { background: #dfe6e9; border: 2px solid #e6e6e6; border-left: none; border-top-right-radius: 8px; border-bottom-right-radius: 8px; padding: 0 12px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 15px; transition: 0.2s; }
 .btn-upload:hover { background: #b2bec3; }
 .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 10px 12px; border: 2px solid #e6e6e6; border-radius: 8px; font-size: 14px; background: #fff; color: var(--text-main); transition: 0.2s; font-family: 'Roboto', sans-serif; }
 .form-group input:focus, .form-group textarea:focus, .form-group select:focus { border-color: var(--primary); box-shadow: 0 0 0 3px rgba(108, 92, 231, 0.1); }
@@ -41,7 +41,7 @@ input[type="file"] { display: none; }
 .btn-add { width: 100%; padding: 12px; background: #fff; border: 2px dashed var(--primary); color: var(--primary); border-radius: 8px; cursor: pointer; font-weight: 700; text-transform: uppercase; font-size: 13px; transition: 0.2s; }
 .btn-add:hover { background: #f0f0ff; }
 .editor-footer { padding: 20px; border-top: 1px solid #e0e0e0; background: #fff; }
-.btn-generate { width: 100%; padding: 14px; background: var(--gradient); color: #fff; border: none; border-radius: 10px; font-size: 16px; font-weight: 700; cursor: pointer; text-transform: uppercase; letter-spacing: 1px; box-shadow: 0 5px 15px rgba(108, 92, 231, 0.4); transition: 0.2s; }
+.btn-generate { width: 100%; padding: 14px; background: var(--gradient); color: #fff; border: none; border-radius: 10px; font-size: 15px; font-weight: 700; cursor: pointer; text-transform: uppercase; letter-spacing: 1px; box-shadow: 0 5px 15px rgba(108, 92, 231, 0.4); transition: 0.2s; }
 .btn-generate:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(108, 92, 231, 0.5); }
 .btn-generate:active { transform: translateY(1px); }
 .preview-area { flex: 1; background: #dfe6e9; padding: 20px; display: flex; align-items: center; justify-content: center; background-image: radial-gradient(#b2bec3 1px, transparent 1px); background-size: 20px 20px; }
@@ -231,7 +231,7 @@ html,body{width:100%;height:100%;background:transparent;
     --c:${c.bc};--bg:${c.wbg};--p1:${c.p1};--p2:${c.p2};--fq:${c.fq}px;--fa:${c.fa}px;--cl:${c.cl};--lb:${c.lb};
     --isz:${c.isz}px; --bsz:${c.bsz}px; --hsz:${c.hsz}px; --tpos:${c.tpos}px; 
 }
-#UI{position:absolute;top:0;left:0;width:100%;padding:15px;z-index:10;display:flex;flex-direction:column;gap:10px;pointer-events:none}
+#UI{position:absolute;top:0;left:0;width:100%;padding:50px 30px;z-index:10;display:flex;flex-direction:column;gap:10px;pointer-events:none}
 .tb{display:flex;align-items:center;justify-content:center;gap:15px;pointer-events:auto}
 #PB{width:40px;height:40px;border-radius:50%;border:2px solid #fff;background:var(--c);color:#fff;font-weight:700;font-size:20px;cursor:pointer;display:flex;align-items:center;justify-content:center;transition:0.1s}
 #PB:active{transform:scale(0.9)}
@@ -271,22 +271,22 @@ html,body{width:100%;height:100%;background:transparent;
 @keyframes cfa{0%{transform:translateY(0) rotate(0deg);opacity:1}100%{transform:translateY(100vh) rotate(720deg);opacity:0}}
 .ss{animation:sha 0.5s}
 @keyframes sha{0%{transform:translate(1px,1px)}10%{transform:translate(-1px,-2px) rotate(-1deg)}30%{transform:translate(3px,2px)}50%{transform:translate(-1px,2px) rotate(-1deg)}70%{transform:translate(3px,1px) rotate(-1deg)}90%{transform:translate(1px,2px)}100%{transform:translate(1px,-2px) rotate(-1deg)}}
-.ov{position:absolute;inset:0;background:rgba(0,0,0,0.85);display:flex;align-items:center;justify-content:center;z-index:20;transition:0.3s;padding:15px;box-sizing:border-box}
+.ov{position:absolute;inset:0;background:rgba(0,0,0,0.85);display:flex;align-items:center;justify-content:center;z-index:20;transition:0.3s;padding:50px 30px !important;box-sizing:border-box !important;min-height:100vh !important}
 .ov.hd{opacity:0;pointer-events:none}
 
 .md {
   background: var(--bg); border: 3px solid var(--c);
   box-shadow: 0 0 30px var(--c), inset 0 0 30px rgba(0,0,0,0.6);
-  border-radius: 25px; width: 95%; max-width: 750px; height: auto; max-height: 90vh;
-  overflow-y: auto; box-sizing: border-box; padding: 40px; color: #fff;
-  display: flex; flex-direction: column; align-items: center; text-align: center; 
+  border-radius: 25px !important; width: 75% !important; max-width: 580px !important; height: auto !important; max-height: 70vh !important;
+  overflow-y: auto; box-sizing: border-box !important; padding: 38px 35px !important; margin: auto !important; color: #fff;
+  display: flex !important; flex-direction: column !important; align-items: center !important; text-align: center !important; position: relative !important; transform: scale(0.98) !important; 
 }
-.md h1 { color: #fff; margin: 0 0 15px 0; font-size: 32px; text-transform: uppercase; text-shadow: 0 0 10px var(--c); width: 100%; font-family:'${c.fn}',sans-serif !important; }
-.md p { color: #eee; font-size: 18px; margin: 0 0 30px 0; white-space: pre-line; line-height: 1.5; width: 100%; font-family:'${c.fn}',sans-serif !important; }
+.md h1 { color: #fff; margin: 0 0 10px 0; font-size: 24px; text-transform: uppercase; text-shadow: 0 0 10px var(--c); width: 100%; font-family:'${c.fn}',sans-serif !important; }
+.md p { color: #eee; font-size: 15px; margin: 0 0 20px 0; white-space: pre-line; line-height: 1.5; width: 100%; font-family:'${c.fn}',sans-serif !important; }
 .game-btn {
   display: flex; align-items: center; justify-content: center;
-  width: auto; max-width: 250px; min-width: 160px; height: 50px; padding: 0 30px;
-  background: var(--c); border-radius: 50px; color: #fff; font-weight: 800; font-size: 18px;
+  width: auto; max-width: 250px; min-width: 160px; height: 46px; padding: 0 30px;
+  background: var(--c); border-radius: 50px; color: #fff; font-weight: 800; font-size: 15px;
   text-transform: uppercase; cursor: pointer; box-shadow: 0 0 15px var(--c);
   transition: all 0.1s; user-select: none; border: 2px solid #fff; line-height: 1 !important; 
   font-family:'${c.fn}',sans-serif !important;
